--- a/app/src/main/res/layout/foul_spinner_layout.xml
+++ b/app/src/main/res/layout/foul_spinner_layout.xml
@@ -5,11 +5,12 @@
     android:layout_height="fill_parent">
 
     <ImageView
+
         android:id="@+id/img_foul"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitCenter"
-        android:src="@drawable/white"
+        android:src="@drawable/_foul"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
