--- a/app/src/main/res/anim/score_anim.xml
+++ b/app/src/main/res/anim/score_anim.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <scale
-        android:fromXScale="1.0"
-        android:fromYScale="1.0"
-        android:toXScale="1.2"
-        android:toYScale="1.1"
-        android:duration="100">
+        android:fromXScale="0.5"
+        android:fromYScale="0.5"
+        android:toXScale="1.0"
+        android:toYScale="1.0"
+        android:duration="700"
+        android:pivotX="50%"
+        android:pivotY="50%">
     </scale>
+
+    <rotate android:fromDegrees="0"
+        android:toDegrees="360"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:duration="400">
+        android:interpolator="@android:anim/cycle_interpolator"></rotate>
 </set>
