--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -24,7 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TableLayout
         android:id="@+id/ballTable"
         android:layout_width="243dp"
@@ -41,11 +40,13 @@
         <TableRow
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
             <Spinner
                 android:id="@+id/spinFoul"
                 android:layout_width="82dp"
                 android:layout_height="82dp"
                 android:background="@null" />
+
             <ImageView
                 android:id="@+id/yellowBall"
                 android:layout_width="82dp"
@@ -58,6 +59,7 @@
         <TableRow
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <ImageView
                 android:id="@+id/greenBall"
                 android:layout_width="82dp"
@@ -65,6 +67,7 @@
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/green_ball" />
+
             <ImageView
                 android:id="@+id/brownBall"
                 android:layout_width="82dp"
@@ -85,6 +88,7 @@
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/blue_ball" />
+
             <ImageView
                 android:id="@+id/pinkBall"
                 android:layout_width="82dp"
@@ -97,6 +101,7 @@
         <TableRow
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <ImageView
                 android:id="@+id/redBall"
                 android:layout_width="82dp"
@@ -104,6 +109,7 @@
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/red_ball" />
+
             <ImageView
                 android:id="@+id/blackBall"
                 android:layout_width="82dp"
@@ -186,23 +192,23 @@
         android:id="@+id/names"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/text_border"
         android:gravity="center_horizontal"
         android:stretchColumns="*"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scores"
-        android:background="@drawable/text_border">
+        app:layout_constraintTop_toBottomOf="@id/scores">
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
-                android:minHeight="60dp"
                 android:id="@+id/p1name"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto_medium"
                 android:gravity="center"
+                android:minHeight="60dp"
                 android:paddingRight="2dp"
                 android:text="@string/TextView"
                 android:textColor="@color/colorWhite"
@@ -243,12 +249,12 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:minHeight="60dp"
                 android:id="@+id/p2name"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto_medium"
                 android:gravity="center"
+                android:minHeight="60dp"
                 android:paddingLeft="2dp"
                 android:text="@string/TextView"
                 android:textColor="@color/colorWhite"
