--- a/app/src/main/res/anim/score_anim.xml
+++ b/app/src/main/res/anim/score_anim.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <scale
-        android:fromXScale="0.5"
-        android:fromYScale="0.5"
+        android:fromXScale="0.3"
+        android:fromYScale="0.3"
         android:toXScale="1.0"
         android:toYScale="1.0"
-        android:duration="700"
+        android:duration="1000"
         android:pivotX="50%"
         android:pivotY="50%">
     </scale>
@@ -14,6 +14,7 @@
         android:toDegrees="360"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="400">
-        android:interpolator="@android:anim/cycle_interpolator"></rotate>
+        android:duration="800"
+        android:interpolator="@android:anim/cycle_interpolator">
+    </rotate>
 </set>
