--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="fill_parent"
@@ -28,34 +27,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
-        app:layout_constraintBottom_toTopOf="@id/playerNames"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/homeToolbar"
-        app:layout_constraintVertical_bias="0.222"
-        app:srcCompat="@drawable/banner" />
+        `<LinearLayout
+            android:id="@+id/bannerContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/homeToolbar"
+            android:background="@drawable/text_background">
+            <ImageView
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                app:srcCompat="@drawable/banner" />
+        </LinearLayout>`
+
 
     <LinearLayout
-        android:id="@+id/playerNames"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:background="@drawable/text_background"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/banner"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@id/bannerContainer"
+        app:layout_constraintVertical_bias="0.36"
+        tools:layout_editor_absoluteX="-10dp"
+        android:background="@drawable/text_background">
 
 
         <TextView
@@ -73,16 +74,17 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <ImageView
-                android:paddingRight="5dp"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
+                android:paddingRight="5dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/_white" />
 
@@ -90,7 +92,6 @@
                 android:id="@+id/p1name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:autofillHints=""
                 android:background="@drawable/text_border"
                 android:ems="12"
                 android:fontFamily="@font/roboto_medium"
@@ -105,12 +106,13 @@
                 android:textStyle="italic" />
 
             <ImageView
-                android:paddingLeft="5dp"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
+                android:paddingLeft="5dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/red_ball" />
+
         </LinearLayout>
 
         <TextView
@@ -120,49 +122,51 @@
             android:layout_marginTop="30dp"
             android:gravity="center"
             android:text="@string/vs"
-            android:textColor="@color/colorWhite"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/p1name" />
+            android:textColor="@color/colorWhite" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:paddingRight="5dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/red_ball" />
-        <EditText
-            android:id="@+id/p2name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:background="@drawable/text_border"
-            android:ems="12"
-            android:fontFamily="@font/roboto_medium"
-            android:hint="@string/name_player_two"
-            android:inputType="textPersonName"
-            android:maxLength="10"
-            android:padding="8dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textCursorDrawable="@null"
-            android:textStyle="italic" />
-        <ImageView
-            android:paddingLeft="5dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/_white" />
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/red_ball" />
+
+            <EditText
+                android:id="@+id/p2name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/text_border"
+                android:ems="12"
+                android:fontFamily="@font/roboto_medium"
+                android:hint="@string/name_player_two"
+                android:inputType="textPersonName"
+                android:maxLength="10"
+                android:padding="8dp"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                android:textCursorDrawable="@null"
+                android:textStyle="italic" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:paddingLeft="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/_white" />
+
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/txtGameOn"
             android:layout_width="match_parent"
@@ -184,9 +188,21 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/button"
             android:fontFamily="@font/roboto_medium"
-            android:onClick="startGame"
+            android:onClick="StartGame"
             android:text="@string/start"
             android:textColor="@color/colorWhite" />
+
+        <Button
+            android:id="@+id/savedGamesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/button"
+            android:fontFamily="@font/roboto_medium"
+            android:onClick="SavedGames"
+            android:text="@string/resume"
+            android:textColor="@color/colorYellow" />
     </LinearLayout>
 
     <ImageView
