--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/imgBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/background"
+        android:contentDescription=""
         android:scaleType="centerCrop"
         android:src="@drawable/background"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,35 +23,123 @@
         android:fontFamily="@font/roboto_medium"
         android:paddingTop="25dp"
         android:paddingBottom="15dp"
-        android:text="@string/game_options"
+        android:text="Options"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_margin="30dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/text_background"
         android:orientation="vertical"
+        android:paddingBottom="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvHeader">
-
-        <Switch
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/screenOnSwitch"
-            android:padding="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Keep screen on during game"
-            android:textColor="@color/colorWhite" />
-    </LinearLayout>
+            android:paddingLeft="30dp"
+            android:paddingTop="30dp"
+            android:paddingRight="30dp"
+            android:text="@string/keep_screen_on_during_game"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:paddingTop="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="10dp"
+                android:text="@string/default_player_one_name"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/p1Name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/text_border"
+                    android:ems="12"
+                    android:fontFamily="@font/roboto_medium"
+                    android:inputType="textPersonName"
+                    android:maxLength="10"
+                    android:padding="8dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorYellow"
+                    android:textColorHint="@color/colorWhite"
+                    android:textCursorDrawable="@null"
+                    android:textStyle="italic" />
+                <Button
+                    android:id="@+id/bSave1"
+                    android:layout_width="40dp"
+                    android:onClick="bUpdateP1"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:background="@android:drawable/ic_menu_save"/>
 
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:paddingTop="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="10dp"
+                android:text="@string/default_player_two_name"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/p2Name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/text_border"
+                    android:ems="12"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center"
+                    android:inputType="textPersonName"
+                    android:maxLength="10"
+                    android:padding="8dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorYellow"
+                    android:textColorHint="@color/colorWhite"
+                    android:textCursorDrawable="@null"
+                    android:textStyle="italic" />
+                <Button
+                    android:id="@+id/bSave2"
+                    android:onClick="bUpdateP2"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:background="@android:drawable/ic_menu_save"/>
+
+             </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
@@ -63,7 +152,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
