--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/AppTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,41 +25,157 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/timers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/ballTable"
+        app:layout_constraintTop_toBottomOf="@id/scoreboardToolbar">
+
+
+    </LinearLayout>
+
     <TableLayout
         android:id="@+id/ballTable"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/text_background"
-        android:stretchColumns="*"
+        android:stretchColumns="1"
         app:layout_constraintBottom_toTopOf="@+id/scores"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scoreboardToolbar">
+        app:layout_constraintTop_toBottomOf="@id/timers">
 
         <TableRow
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_margin="10dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/text_border"
+                    android:gravity="start"
+                    android:orientation="horizontal"
+>
+
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/ic_update_white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:padding="5dp"
+                        android:text="Match "
+                        android:textColor="@color/colorWhite"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/gameTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:padding="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="18sp">
+
+                    </TextView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"></LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/text_border"
+                    android:orientation="horizontal"
+                    android:gravity="end"
+                    android:layout_weight="0.5">
+
+                    <TextView
+                        android:id="@+id/frameTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:padding="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:padding="5dp"
+                        android:text=" Frame"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/ic_update_white" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
             android:layout_height="0dp"
             android:layout_weight="1"
             android:paddingBottom="10dp">
 
-            <Spinner
-                android:id="@+id/spinFoul"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
-                android:background="@null"
-                android:popupBackground="@color/cardview_shadow_start_color"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/yellowBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
-                android:contentDescription="@string/ball"
-                android:scaleType="fitCenter"
-                android:src="@drawable/yellow_ball" />
+                <Spinner
+                    android:id="@+id/spinFoul"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:popupBackground="@color/cardview_shadow_start_color"
+                    android:scaleType="fitCenter" />
+
+                <ImageView
+                    android:id="@+id/yellowBall"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/ball"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/yellow_ball" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
@@ -69,16 +185,18 @@
 
             <ImageView
                 android:id="@+id/greenBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/green_ball" />
 
             <ImageView
                 android:id="@+id/brownBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/brown_ball" />
@@ -91,16 +209,18 @@
 
             <ImageView
                 android:id="@+id/blueBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/blue_ball" />
 
             <ImageView
                 android:id="@+id/pinkBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/pink_ball" />
@@ -112,16 +232,18 @@
 
             <ImageView
                 android:id="@+id/redBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/red_ball" />
 
             <ImageView
                 android:id="@+id/blackBall"
-                android:layout_width="82dp"
-                android:layout_height="82dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:contentDescription="@string/ball"
                 android:scaleType="fitCenter"
                 android:src="@drawable/black_ball" />
@@ -133,6 +255,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/text_background"
         android:stretchColumns="*"
         app:layout_constraintBottom_toTopOf="@id/names"
@@ -156,14 +279,22 @@
                 android:onClick="undoP1"
                 app:srcCompat="@android:drawable/ic_menu_revert" />
 
-            <TextView
-                android:id="@+id/p1Score"
-                android:layout_width="45dp"
-                android:background="@drawable/text_border"
-                android:gravity="center"
-                android:text="@string/zero"
-                android:textColor="@color/colorWhite"
-                android:textSize="40sp" />
+            <LinearLayout
+                android:id="@+id/p1ScoreContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/text_border">
+
+                <TextView
+                    android:id="@+id/p1Score"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="@string/zero"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="40sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/txtHyphen"
@@ -175,14 +306,22 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/p2Score"
-                android:layout_width="45dp"
-                android:background="@drawable/text_border"
-                android:gravity="center"
-                android:text="@string/zero"
-                android:textColor="@color/colorWhite"
-                android:textSize="40sp" />
+            <LinearLayout
+                android:id="@+id/p2ScoreContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/text_border">
+
+                <TextView
+                    android:id="@+id/p2Score"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="@string/zero"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="40sp" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/undoP2"
@@ -199,6 +338,7 @@
         android:id="@+id/names"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/text_border"
         android:gravity="center_horizontal"
         android:stretchColumns="*"
