--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,6 +29,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/summary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/cardview_shadow_start_color"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/scrollScores"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvHeader">
+
+        <TableLayout
+            android:id="@+id/tblSummary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
     <ScrollView
         android:id="@+id/scrollScores"
@@ -40,23 +60,38 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="5dp"
         android:background="@color/cardview_shadow_start_color"
-        app:layout_constraintBottom_toTopOf="@id/btnBack"
+        app:layout_constraintBottom_toTopOf="@id/share"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvHeader">
+        app:layout_constraintTop_toBottomOf="@id/summary">
 
         <LinearLayout
+            android:id="@+id/linearScores"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TableLayout
                 android:id="@+id/tblStats"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content">
+            </TableLayout>
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/share"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@android:drawable/ic_menu_share"
+        android:gravity="center"
+        android:onClick="bShare"
+        app:layout_constraintBottom_toTopOf="@id/btnBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnBack"
