--- a/app/src/main/res/menu/scoreboard_menu.xml
+++ b/app/src/main/res/menu/scoreboard_menu.xml
@@ -1,35 +1,56 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/options"
-        android:title="Options"
-        android:orderInCategory="101"
-        app:showAsAction="never">
-    </item>
+
     <item
         android:id="@+id/stats"
         android:title="Stats"
-        android:orderInCategory="101"
+        android:icon="@drawable/ic_baseline_trending_up"
         app:showAsAction="ifRoom">
-    </item>
-    <item
-        android:id="@+id/rules"
-        android:title="Rules"
-        android:orderInCategory="101"
-        app:showAsAction="never">
     </item>
     <item
         android:id="@+id/endFrame"
-        android:title="End Frame"
-        android:orderInCategory="101"
+        android:title="New Frame"
+        android:icon="@drawable/ic_change_history"
         app:showAsAction="ifRoom">
     </item>
+
     <item
-        android:id="@+id/endMatch"
-        android:title="End Match"
-        android:orderInCategory="101"
-        app:showAsAction="never">
+        android:id="@+id/overflowMenu"
+        android:icon="@drawable/ic_menu"
+        android:title=""
+        app:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/options"
+                android:icon="@drawable/ic_settings"
+                android:title="Options">
+            </item>
+            <item
+                android:id="@+id/rules"
+                android:title="Rules"
+                android:icon="@drawable/ic_fact_check"
+                app:showAsAction="never">
+            </item>
+            <item
+                android:id="@+id/load"
+                android:icon="@drawable/ic_update"
+                android:title="Saved Games"
+                app:showAsAction="never">
+            </item>
+
+            <item
+                android:id="@+id/endMatch"
+                android:icon="@drawable/ic_exit_to_app"
+                android:title="End Match"
+                android:orderInCategory="101"
+                app:showAsAction="never">
+            </item>
+        </menu>
     </item>
+
+
+
+
 </menu>
 <!-- TODO  Add OPTIONS Action/fragment -->
