--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorDark">#4A4A4A</color>
     <color name="colorBlue">#1C7CCF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="colorRed">#B5FF0000</color>
+    <color name="colorWhiteFade">#BFFFFFFF</color>
 </resources>
