--- a/app/src/main/res/menu/scoreboard_menu.xml
+++ b/app/src/main/res/menu/scoreboard_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/stats"
         android:title="Stats"
-        android:icon="@drawable/ic_baseline_trending_up"
+        android:icon="@drawable/ic_query_stats"
         app:showAsAction="ifRoom">
     </item>
     <item
